update splash nav links, fix icon alignment

--- a/src/components/SplashNav/SplashNav.css
+++ b/src/components/SplashNav/SplashNav.css
@@ -9,10 +9,12 @@
 
 .SplashNav a {
   border-bottom: 2px solid transparent;
+  color: inherit;
   cursor: pointer;
   display: inline-block;
-  font-size: 2em;
+  font-size: 1.8em;
   padding: 20px;
+  text-decoration: none;
   transition: border-color .1s ease-in-out;
 }
 
@@ -21,6 +23,5 @@
 }
 
 .SplashNav a .Icon {
-  margin-bottom: -10px;
-  padding-right: 5px;
+  margin: 0 5px -5px 0;
 }
